<resources>
    <string name="app_name">gortega-FEELSBOOK</string>
    <string name="upper_header">How are you feeling today?</string>
    <string name="love_button">Love</string>
    <string name="joy_button">Joy</string>
    <string name="suprise_button">Suprise</string>
    <string name="anger_button">Anger</string>
    <string name="sad_button">Sadness</string>
    <string name="fear_button">Fear</string>
    <string name="lower_header">Other options</string>
    <string name="history_button">History</string>
    <string name="count_button">Count</string>
    <string name="history_header">Past feelings:</string>
    <string name="count_header">Count of emotions</string>
    <string name="feel_comment">Enter an optional comment...</string>
    <string name="anger_count">Anger count:</string>
    <string name="love_count">Love count:</string>
    <string name="joy_count">"Joy count: "</string>
    <string name="surprise_count">"Suprise count: "</string>
    <string name="sad_count">"Sadness count: "</string>
    <string name="Fear_count">"Fear count: "</string>
</resources>
